<resources>
    <string name="app_name">Forecast</string>
    <string name="today">Today</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="feels_like">Feels like</string>
    <string name="precipitation">Precipitation</string>
    <string name="visibility">Visibility</string>
    <string name="wind">Wind</string>
    <string name="weather_location">Weather Location</string>
    <string name="use_device_location">Use device location</string>
    <string name="allow_your_app_to_get_your_location">Allow your app to get your location</string>
    <string name="location">Location</string>
    <string name="the_location_for_which_the_weather_is_displayed">The location for which the weather is displayed</string>
    <string name="please_set_location_manually_in_settings">Please set location manually in settings</string>
</resources>
